Changed 3d model and adjusted other models

--- a/public/auto-show.html
+++ b/public/auto-show.html
@@ -217,10 +217,10 @@
                 </div>
                 <div class="car-card">
                     <div class="img-container">
-                        <img src="images/Porshe-Turbo-S.png" alt="Car 2">
+                        <img src="images/Porsche-Boxster-2016.png" alt="Car 2">
                     </div>
                     <div class="car-info">
-                        <h3>2015 PORSCHE 911 TURBO S</h3>
+                        <h3>2016 PORSCHE 718 BOXSTER S</h3>
                     </div>
                     <div class="favorites">
                         <h3>Add to Favorites</h3>
@@ -231,7 +231,7 @@
                             </i>
                         </label>
                     </div>
-                    <a href="showroom.html?car=3D Models/Porshe-911-2016.FBX" class="view-button">View in
+                    <a href="showroom.html?car=3D Models/Porsche-Boxster-2016.glb" class="view-button">View in
                         Showroom</a>
                 </div>
                 <div class="car-card">
