--- a/public/profile.html
+++ b/public/profile.html
@@ -178,7 +178,13 @@
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
         </div>
     </footer>
-    <script>
+    <script src="Get-Profile-Data.js" defer></script>
+    <script src="Password-Changing.js" defer></script>
+    <script src="Password-Eye-Visibility.js" defer></script>
+    <script src="Change-User-Details.js" defer></script>
+    <script src="Change-User-Password.js" defer></script>
+    <script src="Populate-CarsMenu.js" defer></script>
+    <script defer>
         document.querySelectorAll(`.add-fav .icon-heart`).forEach(entrie => {
             console.log(entrie);
             entrie.addEventListener(`mouseover`, (e) => {
@@ -193,12 +199,6 @@
             });
         });
     </script>
-    <script src="Get-Profile-Data.js" defer></script>
-    <script src="Password-Changing.js" defer></script>
-    <script src="Password-Eye-Visibility.js" defer></script>
-    <script src="Change-User-Details.js" defer></script>
-    <script src="Change-User-Password.js" defer></script>
-    <script src="Populate-CarsMenu.js" defer></script>
 </body>
 
 </html>
