Implemented email service and password reset

--- a/public/profile.html
+++ b/public/profile.html
@@ -131,6 +131,8 @@
                             onclick="togglePasswordVisibilityNewPassRepeat()"></i></span>
                 </div>
                 <button type="submit" id="change-password">Change password</button>
+                <button type="submit" id="forgotten-password">Reset password</button>
+                <p id="forgotten-password-result" style="display: none;"></p>
                 <p id="warning-fields" style="display: none;"></p>
                 <label for="favorite-vehicles">Favorite Vehicles</label>
                 <ul id="favorite-vehicles"></ul>
