updated the spring boot files

--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -83,7 +83,7 @@
             <input type="password" id="confirmPassword" name="confirmPassword" required>
 
             <button type="button" onclick="resetPassword()">Reset Password</button>
-            <p id="result-msg" style="display: none;"></p>
+            <p id="result-msg" style="display: none; color: #f1f1f1; border-radius: 3px;"></p>
         </form>
         <script src="Reset-Password.js"></script>
     </div>
