Implemented the Newsletter mail system

--- a/public/cars-info.html
+++ b/public/cars-info.html
@@ -106,6 +106,7 @@
             <input type="email" placeholder="Your Email Address">
             <button>Subscribe</button>
         </div>
+        <p id="sub-result" style="margin-top: 0.5rem; display: none;">Subscibed successfully!</p>
         <div class="socials-section">
             <a href="https://www.facebook.com/profile.php?id=100005977189177" target="_blank"><i
                     class="fab fa-facebook"></i></a>
@@ -120,6 +121,7 @@
     </footer>
     <script src="Cars-Data.js"></script>
     <script src="User Authentication.js"></script>
+    <script src="Subsribe-To-Newsletter.js"></script>
 </body>
 
 </html>
