--- a/public/auto-show.html
+++ b/public/auto-show.html
@@ -325,6 +325,7 @@
             <input type="email" placeholder="Your Email Address">
             <button>Subscribe</button>
         </div>
+        <p id="sub-result" style="margin-top: 0.5rem; display: none;">Subscibed successfully!</p>
         <div class="socials-section">
             <a href="https://www.facebook.com/profile.php?id=100005977189177" target="_blank"><i
                     class="fab fa-facebook"></i></a>
@@ -360,6 +361,7 @@
     <script src="User Authentication Autoshow.js"></script>
     <script src="Order-Car-Menu.js"></script>
     <script src="Populate-CarsMenu.js"></script>
+    <script src="Subsribe-To-Newsletter.js"></script>
 </body>
 
 </html>
