--- a/public/index.html
+++ b/public/index.html
@@ -241,6 +241,7 @@
             <input type="email" placeholder="Your Email Address">
             <button>Subscribe</button>
         </div>
+        <p id="sub-result" style="margin-top: 0.5rem; display: none;">Subscibed successfully!</p>
         <div class="socials-section">
             <a href="https://www.facebook.com/profile.php?id=100005977189177" target="_blank"><i
                     class="fab fa-facebook"></i></a>
@@ -253,6 +254,7 @@
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
         </div>
     </footer>
+    <script src="Subsribe-To-Newsletter.js"></script>
 </body>
 
 </html>
