--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -92,8 +92,9 @@
         <p>Subscribe to our Newsletter!</p>
         <div class="subscribe-form">
             <input type="email" placeholder="Your Email Address">
-            <button>Subscribe</button>
+            <button style="margin-bottom: 1rem;">Subscribe</button>
         </div>
+        <p id="sub-result" style="margin-top: 0.5rem; display: none;">Subscibed successfully!</p>
         <div class="socials-section">
             <a href="https://www.facebook.com/profile.php?id=100005977189177" target="_blank"><i
                     class="fab fa-facebook"></i></a>
@@ -106,6 +107,7 @@
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
         </div>
     </footer>
+    <script src="Subsribe-To-Newsletter.js"></script>
 </body>
 
 </html>
