--- a/public/profile.html
+++ b/public/profile.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="profile.css">
     <link rel="stylesheet" href="auto-show.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="Showroom-Access.js"></script>
 </head>
 
 <body>
@@ -168,6 +169,7 @@
             <input type="email" placeholder="Your Email Address">
             <button>Subscribe</button>
         </div>
+        <p id="sub-result" style="margin-top: 0.5rem; display: none;">Subscibed successfully!</p>
         <div class="socials-section">
             <a href="https://www.facebook.com/profile.php?id=100005977189177" target="_blank"><i
                     class="fab fa-facebook"></i></a>
@@ -180,7 +182,7 @@
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
         </div>
     </footer>
-    <script src="Get-Profile-Data.js" defer></script>
+    <script src="Get-Profile-Data.js"></script>
     <script src="Password-Changing.js" defer></script>
     <script src="Password-Eye-Visibility.js" defer></script>
     <script src="Change-User-Details.js" defer></script>
@@ -203,6 +205,7 @@
             });
         }, 1700);
     </script>
+    <script src="Subsribe-To-Newsletter.js"></script>
 </body>
 
 </html>
