--- a/public/auto-show.html
+++ b/public/auto-show.html
@@ -12,6 +12,7 @@
     <meta property="og:image" content="images/logo.png">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="Get-Cookie-Token.js"></script>
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -148,7 +149,7 @@
                 </div>
                 <div class="car-card">
                     <div class="img-container">
-                        <img src="images/Lambo-Urus.png" alt="Car 1">
+                        <img src="images/Lamborghini-Urus-2020.png" alt="Car 1">
                     </div>
                     <div class="car-info">
                         <h3>2022 LAMBORGHINI URUS PERFORMANTE</h3>
@@ -167,7 +168,7 @@
                 </div>
                 <div class="car-card">
                     <div class="img-container">
-                        <img src="images/Porsche-carrera.png" alt="Car 2">
+                        <img src="images/Porsche-Carrera-2015.png" alt="Car 2">
                     </div>
                     <div class="car-info">
                         <h3>2015 PORSCHE 911 CARRERA</h3>
@@ -186,7 +187,7 @@
                 </div>
                 <div class="car-card">
                     <div class="img-container">
-                        <img src="images/Lambo-Aventador.png" alt="Car 2">
+                        <img src="images/Lamborghini-Aventador-2020.png" alt="Car 2">
                     </div>
                     <div class="car-info">
                         <h3>2019 LAMBORGHINI AVENTADOR</h3>
@@ -205,7 +206,7 @@
                 </div>
                 <div class="car-card">
                     <div class="img-container">
-                        <img src="images/Lamborghini-Gallardo.png" alt="Car 2">
+                        <img src="images/Lamborghini-Gallardo-2007.png" alt="Car 2">
                     </div>
                     <div class="car-info">
                         <h3>2007 LAMBORGHINI GALLARDO</h3>
@@ -219,12 +220,12 @@
                             </i>
                         </label>
                     </div>
-                    <a href="showroom.html?car=3D Models/Lamborghini-Galardo-2007.glb" class="view-button">View in
+                    <a href="showroom.html?car=3D Models/Lamborghini-Gallardo-2007.glb" class="view-button">View in
                         Showroom</a>
                 </div>
                 <div class="car-card">
                     <div class="img-container">
-                        <img src="images/Toyota-Supra.png" alt="Car 2">
+                        <img src="images/Toyota-Gr-Supra-2020.png" alt="Car 2">
                     </div>
                     <div class="car-info">
                         <h3>2020 TOYOTA SUPRA GR</h3>
@@ -280,7 +281,7 @@
                 </div>
                 <div class="car-card">
                     <div class="img-container">
-                        <img src="images/Mclaren P1.png" alt="Car 2">
+                        <img src="images/Mclaren-P1-2015.png" alt="Car 2">
                     </div>
                     <div class="car-info">
                         <h3>2015 MCLAREN P1</h3>
@@ -298,7 +299,7 @@
                 </div>
                 <div class="car-card">
                     <div class="img-container">
-                        <img src="images/Tesla-Model-3.png" alt="Car 2">
+                        <img src="images/Tesla-Model-3-2020.png" alt="Car 2">
                     </div>
                     <div class="car-info">
                         <h3>2023 TESLA MODEL 3 PERFORMANCE</h3>
