--- a/public/showroom.html
+++ b/public/showroom.html
@@ -19,6 +19,7 @@
         }
     </script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -123,10 +124,8 @@
     <script type="module" src="3DModel-Scene-Switching.js"></script>
     <script src="User Authentication.js"></script>
     <script src="Subsribe-To-Newsletter.js"></script>
-<<<<<<< HEAD
-    <script src="Showroom-Authentication.js"></script>
-=======
->>>>>>> 01852e0dc7d90c77ffa7d99930dce7b1ae748c81
+   
+    <script src="Recently-Viewed-Cars.js"></script>
 </body>
 
 </html>
