--- a/public/cars-info.html
+++ b/public/cars-info.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Showroom</title>
+    <title>Cars Info</title>
     <link rel="stylesheet" href="pages-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="cars-info.css">
     <link rel="stylesheet" href="showroom.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
 </head>
 
 <body>
