--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -7,6 +7,7 @@
     <title>Password Reset</title>
     <link rel="stylesheet" href="pages-style.css">
     <link rel="stylesheet" href="reset-password.css">
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
 </head>
 
 <body>
