--- a/public/showroom.html
+++ b/public/showroom.html
@@ -124,7 +124,7 @@
     <script type="module" src="3DModel-Scene-Switching.js"></script>
     <script src="User Authentication.js"></script>
     <script src="Subsribe-To-Newsletter.js"></script>
-   
+    <script src="Showroom-Authentication.js"></script>
     <script src="Recently-Viewed-Cars.js"></script>
 </body>
 
