Adding new java files

--- a/public/index.html
+++ b/public/index.html
@@ -266,6 +266,7 @@
         </div>
     </footer>
     <script src="Subsribe-To-Newsletter.js"></script>
+    <script src="Showroom-Access.js" defer></script>
     <script src="Populate-Recently-Viewed.js" defer></script>
     <script src="Recently-Viewed-Slider.js" defer></script>
 </body>
