Added the new files

--- a/public/auto-show.html
+++ b/public/auto-show.html
@@ -13,6 +13,12 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="Get-Cookie-Token.js"></script>
     <link rel="icon" href="images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="Sticky-Header.js"></script>
 </head>
 
 <body>
@@ -319,6 +325,12 @@
             </div>
         </section>
     </div>
+    <h1 style="text-align: center;">Recently viewed cars</h1>
+    <div class="slider-container">
+        <div class="recently-viewed-cars" style="display: flex; justify-content: center; flex-wrap: wrap;"
+            bis_skin_checked="1">
+        </div>
+    </div>
     <footer class="footer-section">
         <h3>NEWSLETTER</h3>
         <p>Subscribe to our Newsletter!</p>
@@ -363,6 +375,9 @@
     <script src="Order-Car-Menu.js"></script>
     <script src="Populate-CarsMenu.js"></script>
     <script src="Subsribe-To-Newsletter.js"></script>
+    <script src="Showroom-Access.js" defer></script>
+    <script src="Populate-Recently-Viewed.js" defer></script>
+    <script src="Recently-Viewed-Slider.js" defer></script>
 </body>
 
 </html>
