--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="pages-style.css">
     <link rel="stylesheet" href="reset-password.css">
     <link rel="icon" href="images/logo.png" type="image/x-icon">
+    <script src="Sticky-Header.js"></script>
 </head>
 
 <body>
