--- a/public/cars-info.html
+++ b/public/cars-info.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="showroom.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link rel="icon" href="images/logo.png" type="image/x-icon">
+    <script src="Sticky-Header.js"></script>
 </head>
 
 <body>
