--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <link rel="stylesheet" href="index.css">
+    <script src="Sticky-Header.js"></script>
 </head>
 
 <body>
