--- a/public/newsletter-unsubscribe.html
+++ b/public/newsletter-unsubscribe.html
@@ -23,6 +23,7 @@
         })
     </script>
     <link rel="icon" href="images/logo.png" type="image/x-icon">
+    <script src="Sticky-Header.js"></script>
 </head>
 
 <body>
