--- a/public/profile.html
+++ b/public/profile.html
@@ -18,6 +18,7 @@
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <link rel="icon" href="images/logo.png" type="image/x-icon">
+    <script src="Sticky-Header.js"></script>
 </head>
 
 <body>
