--- a/public/showroom.html
+++ b/public/showroom.html
@@ -20,6 +20,7 @@
     </script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link rel="icon" href="images/logo.png" type="image/x-icon">
+    <script src="Sticky-Header.js"></script>
 </head>
 
 <body>
