Added additional authentication for logged in users

--- a/public/cars-info.html
+++ b/public/cars-info.html
@@ -101,6 +101,12 @@
             <br>
         </div>
     </div>
+    <div id="unsubscribe-confirmation-2" style="display: none;">
+        <p style="color: #a02828; font-size: 18px; font-weight: bold;">You don't have access to this model.</p>
+        <img src="images/Red_X.svg.png" alt="Green Tick Icon" width="50" height="50">
+        <p style="color: #333333;">You either don't have the model ordered, or your session expired. Please try
+            accessing the model through the profile page.</p>
+    </div>
     <footer class="footer-section">
         <h3>NEWSLETTER</h3>
         <p>Subscribe to our Newsletter!</p>
@@ -124,6 +130,7 @@
     <script src="Cars-Data.js"></script>
     <script src="User Authentication.js"></script>
     <script src="Subsribe-To-Newsletter.js"></script>
+    <script src="Showroom-Authentication.js"></script>
 </body>
 
 </html>
