--- a/public/index.html
+++ b/public/index.html
@@ -286,6 +286,7 @@
     <script src="Showroom-Access.js" defer></script>
     <script src="Populate-Recently-Viewed.js" defer></script>
     <script src="Recently-Viewed-Slider.js" defer></script>
+    <script src="Recently-Viewed-Expire.js" defer></script>
 </body>
 
 </html>
