--- a/public/showroom.html
+++ b/public/showroom.html
@@ -85,12 +85,21 @@
         </nav>
     </header>
     <script src="mobile-menu.js"></script>
+    <div id="info-icon" onclick="toggleControlsInfo()">
+        <img src="images/Information-icon.svg.png" alt="Information">
+    </div>
+    <div id="controlls-info" style="display: none;"></div>
     <div id="loader"></div>
     <div id="model-container"></div>
     <div id="unsubscribe-confirmation-2" style="display: none;">
-        <p style="color: #a02828; font-size: 18px; font-weight: bold;">You don't have access to this model.</p>
+        <p style="color: #a02828; font-size: 18px; font-weight: bold; text-align: center;">You cannot access the model at this time.</p>
         <img src="images/Red_X.svg.png" alt="Green Tick Icon" width="50" height="50">
-        <p style="color: #333333;">You either don't have the model ordered, or your session expired. Please try accessing the model through the profile page.</p>
+        <div style="display: flex; flex-direction: column;">
+            <p style="color: #333333;">Possible reasons:</p>
+            <p style="color: #333333;">- The model is not ordered or added to your favorites.</p>
+            <p style="color: #333333;">- Your session may have expired.</p>
+            <p style="color: #333333;">Please try accessing the model through the profile page.</p>
+        </div>
     </div>
     <div class="view-buttons">
         <button id="firstPersonBtn" style="flex-direction: column; align-items: center;">First Person View</button>
@@ -122,6 +131,7 @@
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
         </div>
     </footer>
+    <script src="Info-Icon.js"></script>
     <script type="module" src="3DModel-Scene-Switching.js"></script>
     <script src="User Authentication.js"></script>
     <script src="Subsribe-To-Newsletter.js"></script>
