--- a/public/cars-info.html
+++ b/public/cars-info.html
@@ -102,10 +102,14 @@
         </div>
     </div>
     <div id="unsubscribe-confirmation-2" style="display: none;">
-        <p style="color: #a02828; font-size: 18px; font-weight: bold;">You don't have access to this model.</p>
+        <p style="color: #a02828; font-size: 18px; font-weight: bold; text-align: center;">You cannot access the model at this time.</p>
         <img src="images/Red_X.svg.png" alt="Green Tick Icon" width="50" height="50">
-        <p style="color: #333333;">You either don't have the model ordered, or your session expired. Please try
-            accessing the model through the profile page.</p>
+        <div style="display: flex; flex-direction: column;">
+            <p style="color: #333333;">Possible reasons:</p>
+            <p style="color: #333333;">- The model is not ordered or added to your favorites.</p>
+            <p style="color: #333333;">- Your session may have expired.</p>
+            <p style="color: #333333;">Please try accessing the model through the profile page.</p>
+        </div>
     </div>
     <footer class="footer-section">
         <h3>NEWSLETTER</h3>
