--- a/public/auto-show.html
+++ b/public/auto-show.html
@@ -269,7 +269,7 @@
                 </div>
                 <div class="car-card">
                     <div class="img-container">
-                        <img src="images/BMW-X5.png" alt="Car 2">
+                        <img src="images/BMW-X5-2022.png" alt="Car 2">
                     </div>
                     <div class="car-info">
                         <h3>2022 BMW X5M COMPETITION</h3>
@@ -283,7 +283,7 @@
                             </i>
                         </label>
                     </div>
-                    <a href="showroom.html?car=3D Models/BMW-X5.glb" class="view-button">View in Showroom</a>
+                    <a href="showroom.html?car=3D Models/BMW-X5-2022.glb" class="view-button">View in Showroom</a>
                 </div>
                 <div class="car-card">
                     <div class="img-container">
@@ -375,7 +375,6 @@
     <script src="Order-Car-Menu.js"></script>
     <script src="Populate-CarsMenu.js"></script>
     <script src="Subsribe-To-Newsletter.js"></script>
-    <script src="Showroom-Access.js" defer></script>
     <script src="Populate-Recently-Viewed.js" defer></script>
     <script src="Recently-Viewed-Slider.js" defer></script>
 </body>
