--- a/public/index.html
+++ b/public/index.html
@@ -276,14 +276,14 @@
                     class="fab fa-facebook"></i></a>
             <a href="https://github.com/DenisDanov" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.instagram.com/denisdanov69/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/denis-danov-510756246/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/denis-danov-510756246/" target="_blank"><i
+                    class="fab fa-linkedin"></i></a>
         </div>
         <div class="copyright-section">
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
         </div>
     </footer>
     <script src="Subsribe-To-Newsletter.js"></script>
-    <script src="Showroom-Access.js" defer></script>
     <script src="Populate-Recently-Viewed.js" defer></script>
     <script src="Recently-Viewed-Slider.js" defer></script>
 </body>
